# forge_llm

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPRINT_PLAN.md  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml  setup_env.sh
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/advanced/: architecture.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: client-usage.md  index.md
docs/guides/getting-started/: installation.md
docs/integrations/forgebase_guides/: README.md
docs/integrations/forgebase_guides/agentes-ia/: descoberta.md  ecossistema.md  guia-completo.md  inicio-rapido.md
docs/integrations/forgebase_guides/usuarios/: ambiente_e_scripts.md  apps-derivados-forgebase.md  cli-first.md  composition-guide.md  extending-forgebase.md  forgebase-rules.md  guia-de-testes.md  inicio-rapido.md  receitas.md
docs/product/sprints/sprint-1/: planning.md  progress.md  review.md
docs/product/sprints/sprint-10/: bill-review.md  jorge-process-review.md  planning.md  progress.md  retrospective.md
docs/product/sprints/sprint-11/: planning.md  progress.md
docs/product/sprints/sprint-12/: jorge-process-review.md  progress.md
docs/product/sprints/sprint-13/: bill-review-v2.md  bill-review.md
docs/product/users/: recipes.md
examples/: 01_basic_chat.py  02_streaming.py  03_conversation.py  04_tool_calling.py  05_json_mode.py  06_multiple_providers.py
process/: AGENTS_PROCESS.md  README.md  process_execution_state.md
process/bdd/: SUMMARY_FOR_AGENTS.md
process/delivery/: SUMMARY_FOR_AGENTS.md
process/delivery/e2e/: PROCESS.yml
process/docs/: LLM_ORCHESTRATION_GUIDE.md  SYMBIOTE_MANIFEST_SCHEMA.md
process/execution/: SUMMARY_FOR_AGENTS.md
process/execution/roadmap_planning/: ROADMAP_PLANNING_PROCESS.md
process/execution/tdd/: PROCESS.yml  TDD_PROCESS.md
process/feedback/: SUMMARY_FOR_AGENTS.md
process/mdd/: SUMMARY_FOR_AGENTS.md
process/state/: forgeprocess_state.yml
process/symbiotes/bdd_coach/: prompt.md
process/symbiotes/execution_coach/: prompt.md
process/symbiotes/mark_arc/: prompt.md
process/symbiotes/sprint_coach/: prompt.md
process/templates/: session_log.md
project/: recommendations.md
project/docs/: aprovacao_mvp.md  hipotese.md  jorge-review-execution.md  pitch_deck.md  sumario_executivo.md  visao.md
project/sessions/: 2024-12-17-documentation-and-discovery.md  README.md
project/specs/: ARCHITECTURE_PROPOSAL_V2.md  ARQUITETURE_PROPOSAL.md  FORGEBASE_PLUGIN_PROPOSAL.md  FORGEBASE_PLUGIN_PROPOSAL_V3.md
project/specs/bdd/: HANDOFF_BDD.md  README.md  tracks.yml
project/specs/roadmap/: ARCHITECTURAL_DECISIONS_APPROVED.md  ARCHITECTURAL_QUESTIONNAIRE.md  BACKLOG.md  DEPENDENCY_ANALYSIS.md  ROADMAP.md  TECH_STACK.md  estimates.yml  feature_breakdown.md
project/sprints/sprint-02/: planning.md
project/sprints/sprint-12/: bill-review.md  planning.md
project/sprints/sprint-13/: jorge-process-review-v2.md  jorge-process-review.md  planning.md  progress.md
project/sprints/sprint-mvp/: planning.md  progress.md  retrospective.md  review.md
prompts/: README.md  extraction.md  summarization.md
prompts/system/: coding_assistant.md  data_analyst.md  general_assistant.md
scripts/hooks/: commit-msg-check.py
specs/bdd/10_forge_core/: auto_fallback.feature  mcp_client.feature  streaming.feature
specs/roadmap/: TECH_STACK.md
src/forge_llm/: __init__.py  cli.py  client.py
src/forge_llm/application/: __init__.py  registry.py
src/forge_llm/dev/: __init__.py
src/forge_llm/domain/: __init__.py  entities.py  exceptions.py  stream_events.py  value_objects.py
src/forge_llm/infrastructure/: __init__.py  hooks.py  logging.py
src/forge_llm/mcp/: __init__.py  adapter.py  exceptions.py  mcp_client.py
src/forge_llm/persistence/: __init__.py  conversation_store.py  json_store.py  memory_store.py
src/forge_llm/prompts/: __init__.py
src/forge_llm/providers/: __init__.py  auto_fallback_provider.py  gemini_provider.py  llamacpp_provider.py  mock_provider.py  ollama_provider.py  registry.py
src/forge_llm/utils/: token_counter.py
tests/bdd/: __init__.py  conftest.py  test_auto_fallback_steps.py  test_integration.py  test_mcp_steps.py  test_streaming_steps.py
tests/bdd/steps/: __init__.py  test_chat_steps.py  test_providers_steps.py  test_response_steps.py  test_session_steps.py  test_tokens_steps.py  test_tools_steps.py
tests/e2e/cycle-01/: README.md  run-all.sh  test_e2e_flows.py  test_real_api.py
tests/integration/: test_gemini_integration.py  test_hooks_integration.py
tests/live/: README.md  __init__.py  test_anthropic_live.py  test_cross_provider_live.py  test_openai_live.py
tests/unit/: test_anthropic_adapter.py  test_async_agent.py  test_async_summarize_compactor.py  test_auth.py  test_auto_compaction.py  test_chat_agent.py  test_chat_agent_tools.py  test_chat_message.py  test_chat_session.py  test_client.py  test_compactor.py  test_content.py  test_conversation_scenarios.py  test_error_fallback_scenarios.py  test_error_handling.py  test_list_providers.py  test_ollama_adapter.py  test_openai_adapter.py  test_openrouter_adapter.py  test_provider_config.py  test_provider_contract.py  test_provider_port.py  test_provider_registry.py  test_provider_switching_scenarios.py  test_response_normalization.py  test_session_persistence_scenarios.py  test_streaming_edge_cases.py  test_streaming_tokens.py  test_streaming_with_tools.py  test_summarize_compactor.py  test_tool_chaining_scenarios.py  test_tool_entities.py  test_tool_registry.py  test_tool_validation.py
tests/unit/domain/: test_conversation.py  test_stream_events.py
tests/unit/infrastructure/: test_hooks.py
tests/unit/mcp/: __init__.py  test_mcp_client.py
tests/unit/persistence/: __init__.py  test_conversation_store.py
tests/unit/providers/: test_auto_fallback_provider.py  test_gemini_provider.py  test_llamacpp_provider.py  test_mock_provider.py  test_ollama_provider.py
tickets/: FORGE-002-streaming-tool-calls.md  FORGEBASE_PLUGIN_PROPOSAL.md  FORGEBASE_PLUGIN_PROPOSAL_V3.md
(+98 files in other folders)
