[project]
name = "forge-llm"
version = "0.1.0"
description = "SDK Python para interface unificada com LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "SymLabs", email = "contact@symlabs.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "ai", "openai", "anthropic", "sdk"]

dependencies = [
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "tiktoken>=0.5.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
forge-llm = "forge_llm.cli:main"

[project.urls]
Homepage = "https://github.com/symlabs-ai/forgellmclient"
Documentation = "https://github.com/symlabs-ai/forgellmclient#readme"
Repository = "https://github.com/symlabs-ai/forgellmclient"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ============================================================
# RUFF
# ============================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "N",   # pep8-naming
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F401"]
"src/forge_llm/**/__init__.py" = ["F401", "F403"]

# ============================================================
# MYPY
# ============================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================
# PYTEST
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "ci_fast: Testes rapidos (mocks)",
    "ci_int: Testes de integracao",
    "slow: Testes lentos",
    "sdk: Forge SDK",
    "provider: Provedores especificos",
    "openai: Provedor OpenAI",
    "anthropic: Provedor Anthropic",
    "streaming: Testes de streaming",
    "tools: Testes de tool calling",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# COVERAGE
# ============================================================

[tool.coverage.run]
source = ["src/forge_llm"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
