[tool.poetry]
name = "forge-llm"
version = "0.1.0"
description = "Unified LLM client with provider portability"
authors = ["ForgeTeam"]
readme = "README.md"
packages = [{include = "forge_llm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# forge-base = "^0.2.0"  # TODO: Descomentar quando disponivel
openai = "^1.0.0"
anthropic = "^0.30.0"
pydantic = "^2.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-bdd = "^7.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
respx = "^0.21.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "ci_fast: Fast tests with mocks",
    "ci_int: Integration tests",
    "e2e: End-to-end tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
